--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 /*  your css code here. If applicable */
-.item1 { grid-area: 1; }
+/*.item1 { grid-area: 1; }
 .item2 { grid-area: 2; }
 .item3 { grid-area: 3; }
 .item4 { grid-area: 4; }
@@ -8,12 +8,14 @@
 .item7 { grid-area: 7; }
 .item8 { grid-area: 8; }
 .item9{ grid-area: 9; }
-.item10 { grid-area:10; }
+.item10 { grid-area:10; }*/
 
 #grid-container {
-  display:grid;
-  gap: 10px 10px;
-  background-color: #2196F3;
+  display: grid;
+grid-template-columns:repeat(4,1fr) ;
+	grid-template-rows:repeat(5,1fr);
+  gap: 5px 5px;
+  background-color:white;
   padding: 10px;
 }
 
@@ -22,4 +24,22 @@
   text-align: left;
   padding: 20px 0;
   font-size: 30px;
+}
+.item1{
+	grid-column:1/-1;
+}
+.item2{
+	grid-row:2/span 4;
+}
+.item3{
+	grid-column:2/3;
+}
+.item4{
+	grid-column:3/-1;
+}
+.item5{
+	grid-column:2/-2
+}
+.item10{
+	grid-column:2/-1
 }
